--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
 
     h1,
     h2,
@@ -47,6 +48,19 @@ body {
             background-color: transparent;
             border: 0;
             padding: 0;
+        }
+    }
+
+
+    .Navbar {
+        padding: 50px 0;
+
+        h1 {
+            font-family: 'Pangolin', cursive;
+            color: #5600ff;
+            font-weight: 600;
+            user-select: none;
+            font-size: 29px;
         }
     }
 
