--- a/src/components/Katalog/KatalogObshi/katalogObshiy.css
+++ b/src/components/Katalog/KatalogObshi/katalogObshiy.css
@@ -1,4 +1,4 @@
-.frs_katalog{
+/* .frs_katalog{
     width: 100%;
     margin: auto;
     padding-top: 50px;
@@ -7,9 +7,9 @@
     flex-direction: column !important;
     align-items: flex-start !important;
     gap: 30px;
-}
+} */
 
-.frs_1{
+.frs_1 {
     width: 20.5vw;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
     border: 1px solid #e5e5e5;
 }
 
-.imag_frs_1{
+.imag_frs_1 {
     width: 100%;
     padding: 18px 25px 18px 20px;
     background-color: #f2f2f2;
@@ -26,36 +26,36 @@
     border-top-right-radius: 5px;
 }
 
-.imag_frs_1 img{
+.imag_frs_1 img {
     width: 100%;
 }
 
-.img_sec{
+.img_sec {
     padding: 9px 9px 9px 9px !important;
 }
 
-.image_keyborads{
+.image_keyborads {
     padding: 60px 0px 60px 0;
 }
 
-.text_frs{
+.text_frs {
     width: 100%;
     padding: 22px 0px 20px 15px;
 }
 
-.text_frs h2{
+.text_frs h2 {
     font-size: 24px;
     font-weight: 500;
 }
 
-.btn_katalog{
+.btn_katalog {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
 }
 
-.btn_katalog .btn_sena{
+.btn_katalog .btn_sena {
     border-radius: 5px;
     background-color: #ff7e00;
     border: none;
@@ -66,7 +66,7 @@
     line-height: 16px;
 }
 
-.bnt_serdechka{
+.bnt_serdechka {
     border-radius: 5px;
     padding: 8px 13px;
     color: #ff7e00;
@@ -74,9 +74,8 @@
     outline: none;
 }
 
-.top_frs_1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 25px;
+.top_frs_1 {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
 }
