--- a/src/components/Katalog/InKatalog/KatalogTabs/TabsKatalog.css
+++ b/src/components/Katalog/InKatalog/KatalogTabs/TabsKatalog.css
@@ -129,6 +129,14 @@
   object-fit: cover;
 }
 
+.content input {
+  display: none;
+}
+
+.content label {
+  font-size: 30px;
+}
+
 
 
 @media(max-width:668px){
