--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,3 +1,8 @@
 .Loader {
-    background-color: red;
+    /* background-color: red; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
