--- a/src/components/HomePage/HomeAbout/homeAbout.css
+++ b/src/components/HomePage/HomeAbout/homeAbout.css
@@ -1,4 +1,4 @@
-.home_about{
+.home_about {
     width: 100%;
     height: 100vh;
     background-image: url("../../../image/Rectangle 7.png");
@@ -6,10 +6,16 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    padding: 340px 680px 127px 80px;
 }
 
-.text_home{
+.about_container {
+    margin: auto;
+    padding: 0 20px;
+    max-width: 1440px;
+    width: 100%;
+}
+
+.text_home {
     max-width: 1440px;
     margin: auto;
     color: #ffffff;
@@ -18,7 +24,7 @@
     padding: 0;
 }
 
-.text_home .takrorlanmas{
+.text_home .takrorlanmas {
     list-style-type: none;
     display: flex;
     justify-content: flex-start;
@@ -28,26 +34,101 @@
 }
 
 .text_home .takrorlanmas li {
+    font-size: 25px;
     color: #ffffff;
 }
 
-.text_home .takrorlanmas li:nth-child(2){
+.text_home .takrorlanmas li:nth-child(2) {
     width: 40%;
 }
-.text_home .takrorlanmas li:nth-child(1){
+
+.text_home .takrorlanmas li:nth-child(1) {
     text-decoration: underline;
 }
 
-.text_home h3{
-    font-size: 24px;
+.text_home h3 {
+    padding-top: 300px;
+    font-size: 26px;
     font-weight: 500;
     color: #ffffff;
     line-height: 29px;
+
+
 }
 
-.text_home p{
-    font-size: 56px;
+.text_home p {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    width: 900px;
+    font-size: 65px;
     font-weight: 700;
     font-style: normal;
     line-height: 67.77px;
+
+
+}
+
+@media(max-width: 992px) {
+
+    .text_home h3 {
+        padding-top: 250px;
+        text-align: center
+    }
+
+    .text_home p {
+        width: 100%;
+        text-align: center
+    }
+
+    .takrorlanmas {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 15px !important;
+    }
+
+    .text_home li {
+        margin: 10px;
+        text-align: center;
+        margin: auto;
+        width: 50% !important;
+    }
+
+}
+
+@media(max-width: 767px) {
+    .text_home p {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .text_home li {
+        width: 100% !important;
+    }
+
+}
+
+@media(max-width: 576px) {
+    .text_home p {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .text_home li {
+        font-size: 20px !important;
+        width: 100% !important;
+    }
+
+}
+
+@media(max-width: 450px) {
+    .text_home p {
+        font-size: 30px;
+        line-height: 40px;
+    }
+
+    .text_home li {
+        font-size: 20px !important;
+        width: 100% !important;
+    }
+
 }
