--- a/src/components/OurWork/ourWork.css
+++ b/src/components/OurWork/ourWork.css
@@ -83,6 +83,12 @@
     }
 }
 
+@media(max-width:992px){
+    .our_work_page{
+        padding: 129px 80px 80px 77px;
+    }
+}
+
 @media(max-width: 920px){
     .top_flex_image{
         display: flex;
@@ -92,13 +98,13 @@
 
 @media(max-width: 770px){
     .our_work_page{
-        padding: 189px 30px 80px 30px;
+        padding: 119px 30px 80px 30px;
         
     }
 }
 @media(max-width: 440px){
     .our_work_page{
-        padding: 189px 15px 80px 15px;
+        padding: 109px 15px 80px 15px;
     }
 
     .top_flex_image_2{
