--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,5 @@
 .footer_head{
-    background-color: #121212;
-
+    background: linear-gradient(136.14deg, #FBB90E -28.56%, #EE751D 95.4%);
 }
 
 .footer{
@@ -14,7 +13,7 @@
 
 .fot_bootom{
     width: 100%;
-    background-color: #121212;
+    background: linear-gradient(136.14deg, #FBB90E -28.56%, #EE751D 95.4%);
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -24,7 +23,7 @@
 
 .footer_1 ul{
     list-style-type: none;
-    color: #8a8a8a;
+    color: #ffffffb8;
     line-height: 21.78px;
 }
 
@@ -49,7 +48,7 @@
 }
 
 .footer_1 ul li a{
-    color: #8a8a8a;
+    color: #ffffffb8;
     transition: 0.4s;
 }
 
@@ -117,7 +116,7 @@
 
   .foot_second{
     width: 100%;
-    background-color: #121212;
+    background: linear-gradient(136.14deg, #FBB90E -28.56%, #EE751D 95.4%);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
