--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -343,7 +343,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: #121212;
+    background: linear-gradient(136.14deg, #FBB90E -28.56%, #EE751D 95.4%);
     top: 1px;
     left: 0;
     width: 100%;
