--- a/src/components/HomePage/HomeSecond/homeSecond.css
+++ b/src/components/HomePage/HomeSecond/homeSecond.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 100px 80px 0px 80px;
+    padding: 70px 80px 0px 80px;
     gap: 30px;
 }
 
@@ -52,6 +52,16 @@
     font-weight: 600;
     font-style: normal;
     line-height: 53px;
+}
+
+.ul_abput li{
+    margin-bottom: 10px;
+}
+
+.react_icpn{
+    color: green;
+    position: relative;
+    left: -10px;
 }
 
 @media(max-width: 992px){
