--- a/src/components/Katalog/InKatalog/inKatalog.css
+++ b/src/components/Katalog/InKatalog/inKatalog.css
@@ -10,7 +10,20 @@
 .top_in_kat{
     display: flex;
     justify-content: flex-start;
-    gap: 55px;
+    gap: 10px;
+}
+
+.mySwiper .swiper-wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    /* background-color: yellow; */
+}
+
+.mySwiper .swiper-wrapper img{
+    height: 100%;
+    margin-bottom: 10px;
+    /* height: 100px; */
 }
 
 .botm_kupi{
@@ -57,6 +70,10 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    margin-top: 35px;
+    /* position: relative;
+    left: -350px;
+    top: 40px; */
 }
 
 .right_top1 h4{
@@ -90,6 +107,39 @@
     line-height: 16px;
     font-weight: 500;
     border-radius: 5px;
+}
+/* 
+@media(max-width:1334px){
+    .right_top1{
+        left: -300px;
+    }
+}
+@media(max-width:1208px){
+    .right_top1{
+        left: -250px;
+    }
+}
+@media(max-width:1047px){
+    .right_top1{
+        left: -200px;
+    }
+}
+
+@media(max-width:935px){
+    .mySwiper .swiper-wrapper{
+     
+           display: NONE;
+    }
+} */
+
+@media(max-width:935px){
+    .mySwiper .swiper-wrapper{
+      display: none;    
+    }
+
+    .mySwiper2{
+        margin-top: -100px;
+    }
 }
 
 @media(max-width:1142px){
