--- a/src/components/Solnechnaya/SolnechnayaHome/solnechnayaHome.css
+++ b/src/components/Solnechnaya/SolnechnayaHome/solnechnayaHome.css
@@ -112,23 +112,30 @@
     padding-bottom: 20px;
 }
 
+.soln_imf_1{
+    width: 410px;
+    height: 300px;
+}
 
 .soln_imf_1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .soln_1_uslu{
+    /* width: 410px; */
     display: flex;
     flex-direction: column;
     border: 1px solid #f2f2f2;
     border-radius: 5px;
 }
 
-.soln_imf_1 img{
-    width: 100%;
-}
 
 .sol_text{
     padding: 5px 87px 20px 15px;
