--- a/src/components/Solnechnaya/SolnechnayaHome/solnechnayaHome.css
+++ b/src/components/Solnechnaya/SolnechnayaHome/solnechnayaHome.css
@@ -106,6 +106,8 @@
 }
 
 .flex_soln_usl{
+    max-width: 1440px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 30px;
