--- a/src/components/Katalog/InKatalog/inKatalog.css
+++ b/src/components/Katalog/InKatalog/inKatalog.css
@@ -8,6 +8,7 @@
     gap: 50px;
 }
 .top_in_kat{
+    
     display: flex;
     justify-content: flex-start;
     gap: 10px;
@@ -35,6 +36,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+    
 }
 
 .left_img_top1{
@@ -52,7 +54,8 @@
 }
 
 .inkatalog_image{
-    width: 89px;
+    width: 550px;
+    /* width: 89px; */
     background-color: #f2f2f2;
 }
 
@@ -67,16 +70,19 @@
 }
 
 .right_top1{
+    /* background-color: red; */
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 12px;
     margin-top: 35px;
-    /* position: relative;
-    left: -350px;
-    top: 40px; */
+    position: relative;
+    left: -200px;
+    /* top: 40px; */
 }
 
 .right_top1 h4{
+    width: 300px;
     font-size: 21px;
     line-height: 25.41px;
 }
