--- a/src/components/Orgotextnika/OrgotexnikaKatalog/orgotexnikaKatalog.css
+++ b/src/components/Orgotextnika/OrgotexnikaKatalog/orgotexnikaKatalog.css
@@ -9,7 +9,6 @@
 }
 
 .card_katalog{
-    width: 100%;
     display: grid;
     grid-template-columns: auto auto auto;
     padding-top: 30px;
@@ -17,14 +16,15 @@
 }
 
 .card_katalog img{
-    width: 90% !important;
+    width: 90% ;
 }
 
 .card_image{
+    width: 390px;
+    height: 430px;
     background-color: #f2f2f2;
     border-radius: 5px;
-    
-    padding: 15px 11px 67px 11px;
+    padding: 15px 11px 20px 11px;
     cursor: pointer;
     font-size: 24px;
     font-weight: 600;
@@ -41,24 +41,23 @@
     transition: 0.3s ease-in;
 }
 .card_image .pereyti:hover{
-    
     color: #8a8a8a;
 }
 
 .card_image img{
-    padding: 32px 23px 13px 23px;
+    width: 100%;
+    padding: 32px 23px 0px 23px;
 }
 
 .card_image a{
     color: #121212;
 }
 
-
-
 .img_carousel_1{
     border: 1px solid #f2f2f2;
     padding: 0 0 20px 0;
     display: flex;
+    /* justify-content: space-between; */
     flex-direction: column;
     align-items: center;
     gap: 10px;
